--- a/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
+++ b/src/Modules/innerModule/inner/innerComponents/home/description/description.component.html
@@ -1,51 +1,105 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 <div class="container row desc_Container">
-    <form (submit)="Add(product.value,amount.value)">
-        <div class="col-xs-5">
-            <label>Product</label>
-            <input type="text" class="form-control" placeholder="Product" #product [(ngModel)]="productclear"
-                [ngModelOptions]="{standalone: true}">
+  <form (submit)="Add(product.value, amount.value, descriptionproduct.value)">
+    <div class="col-xs-4">
+      <label>Product</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Product"
+        #product
+        [(ngModel)]="productclear"
+        [ngModelOptions]="{ standalone: true }"
+      />
+    </div>
+    <div class="col-xs-3">
+      <label>Amount</label>
+      <div class="input-group">
+        <div class="input-group-addon">$</div>
+        <input
+          type="text"
+          class="form-control"
+          id="exampleInputAmount"
+          placeholder="2,000/m"
+          #amount
+          [(ngModel)]="amountclear"
+          [ngModelOptions]="{ standalone: true }"
+        />
+      </div>
+    </div>
+    <div class="col-xs-5">
+      <label>Description</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Description"
+        #descriptionproduct
+        [(ngModel)]="descriptionproductclear"
+        [ngModelOptions]="{ standalone: true }"
+      />
+    </div>
+    <div class="row col-xs-12 col-md" style="padding-top: 15px; display:flex; justify-content: center !important;">
+        <div>
+            <!-- <label>Add</label> -->
+            <button class="form-control" style="width: 200px;" placeholder=".col-xs-4"><strong>Add +</strong></button>
         </div>
-        <div class="col-xs-5">
-            <label>Amount (in dollars)</label>
-            <div class="input-group">
-                <div class="input-group-addon">$</div>
-                <input type="text" class="form-control" (keypress)="numberOnly($event)" id="exampleInputAmount"
-                    placeholder="" #amount [(ngModel)]="amountclear" [ngModelOptions]="{standalone: true}">
-                <div class="input-group-addon">.00</div>
-            </div>
-        </div>
-        <div class="col-xs-2">
-            <label>Add</label>
-            <button class="form-control" placeholder=".col-xs-4">+</button>
-        </div>
+      
+    </div>
+  </form>
 
-    </form>
+  <div class="row"></div>
+  <br />
+  <br />
 
+  <div>
+    <div class="col-sm-3 col-xs-3 col-sm-offset-1"><strong>Product</strong></div>
+    <div class="col-sm-4 col-xs-4"><strong>Description</strong></div>
+    <div class="col-sm-2 col-xs-2"><strong>Price</strong></div>
+    <div class="col-sm-1 col-xs-1"></div>
+    
+  </div>
 
-<br>
-<div class="row"></div>
-<div style="padding-left: 15px; padding-top: 10px;"><b><span style="align-content:left">Product Name</span> <span style="position: absolute;right: 15%;">Price</span>
-        <span style="position: absolute;right: 15px;"></span></b></div>
+  <!-- <div style="padding-left: 15px; padding-top: 10px;">
+    <b
+      ><span style="align-content:left">Product Name</span>
+      <span style="position: absolute;right: 35%;">Description</span>
+      <span style="position: absolute;right: 15%;">Price</span>
+      <span style="position: absolute;right: 15px;"></span
+    ></b>
+  </div> -->
 
-<div class="list-group">
+  <div class="" *ngFor="let data of formData">
 
-
-    <ul class="list-group-item" *ngFor="let data of formData">
-
-        <li class="">
-            <span style="align-content:left">{{ data.name }}</span> <span
-                style="position: absolute;right: 15%;">{{ data.amount }}</span>
-            <span style="position: absolute;right: 15px;"> <a (click)="onItemDeselect(data)" class="delete"><i
-                        class="fa fa-trash"></i></a></span>
-        </li>
-    </ul>
+        <div class="col-sm-3 col-xs-3 col-sm-offset-1">{{ data.name }}</div>
+        <div class="col-sm-4 col-xs-4">{{ data.description }}</div>
+        <div class="col-sm-2 col-xs-2">{{ data.amount }}</div>
+        <div class="col-sm-1 col-xs-1"> </div>
+    <!-- <ul class="list-group-item" *ngFor="let data of formData">
+      <li class="">
+        <span style="align-content:left">{{ data.name }}</span>
+        <span style="position: absolute;right: 35%;">{{ data.description }}</span>
+        <span style="position: absolute;right: 15%;">{{ data.amount }}</span>
+        <span style="position: absolute;right: 15px;">
+          <a (click)="onItemDeselect(data)" class="delete"
+            ><i class="fa fa-trash"></i></a
+        ></span>
+      </li>
+    </ul> -->
+  </div>
+  <div
+    class="formNav next"
+    style="position: absolute;bottom:15px;right: 37%;padding-bottom: 15px;font-size: 20px;border-bottom: 2px;"
+  >
+    <a class="next" (click)="nextpage()">Next</a>
+  </div>
+  <div
+    class="formNav back"
+    style="position: absolute;bottom:15px;right: 52%;padding-bottom: 15px;font-size: 20px;"
+  >
+    <a class="next" (click)="back()">Back</a>
+  </div>
 </div>
-<div class="formNav next" style="position: absolute;bottom:15px;right: 37%;padding-bottom: 15px;font-size: 20px;border-bottom: 2px;">
-    <a class="next" (click)="nextpage()" >Next</a>
-</div>
-<div class="formNav back" style="position: absolute;bottom:15px;right: 52%;padding-bottom: 15px;font-size: 20px;">
-    <a class="next" (click)="back()" >Back</a>
-</div>
-</div>
-<br>
+<br />
